--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": false,
-"NamaBot":"ꪶ RAFHAN⇥SERꫂ⁩",
-"NomorOwner":"919745310120",
-"NamaOwner":"ꪶ RAFHAN",
+"NamaBot":"ꪶ͢sᴋ ᴅᴇᴠɪʟ sᴇʀꫂ⁩⁩⁩",
+"NomorOwner":"994401307215",
+"NamaOwner":"ꪶ͢sᴀʟᴍᴀɴ ᴏғᴄꫂ⁩",
 "HunterApi":"Ikyy69"
 }
